<resources>
    <string name="app_name">Grocery Assistant</string>
    <string name="title_home">My Grocery</string>
    <string name="title_dashboard">Shopping List</string>
    <string name="title_notifications">Recipes</string>

    <string name="groceryText">My Grocery fragment</string>
    <string name="shoppingText">Shopping List fragment</string>
    <string name="recipeText">Recipe fragment</string>
    <string name="plus_sign">+</string>

    <!-- for popup menu for actions -->
    <string name="modify">Modify</string>
    <string name="delete">Delete</string>

    <!-- for modification dialog-->
    <string name="modification_dialog_message">Are you sure?</string>
    <string name="modification_dialog_save">Save </string>
    <string name="modification_dialog_cancel">Cancel </string>
    <string name="item_name">Name</string>
    <string name="item_expiration">Expiration Date</string>

    <!--for notification setting dialog-->
    <string name="notification_setting_checkbox">Don\'t want to receive notification</string>
    <string name="notification_setting_days_msg">Days close to expiration date to get notified: </string>
    <string name="notification_setting_time_msg">Time to get notified: </string>
    <string name="notification_setting_time_button_msg">Pick a time </string>

    <!--for recipe page -->
    <string name="select_ingredients_msg">Please select ingredients first:</string>
    <string name="next_step_arrow">move to next step</string>
    <string name="next_step">Next Step:</string>
    <string name="search_recipes"> Search Recipes</string>
    <string name="back">Back</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
