<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

            <CheckBox
                android:id="@+id/notification_setting_checkbox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/notification_setting_checkbox" />

            <View
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:layout_weight="1"/>

            <TextView
                android:id="@+id/notification_setting_days_msg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/notification_setting_days_msg"
                android:textSize="7pt"
                android:paddingLeft="10dp"
                android:textColor="@color/disable_text"/>

            <NumberPicker
                android:id="@+id/notification_setting_closeInDays"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"/>


            <View
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:layout_weight="1"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/notification_setting_time_msg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/notification_setting_time_msg"
                    android:textSize="7pt"
                    android:textColor="@color/disable_text"
                    android:paddingLeft="10dp"/>
                <Button
                    android:id="@+id/notification_setting_time"
                    android:layout_width ="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="30dp"
                    android:text="@string/notification_setting_time_button_msg" />
            </LinearLayout>

</LinearLayout>